# openai-iztro-agents-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_hello_ziwei.py  02_prompt_gallery.py  03_streaming_chat.py  04_memory_and_resume.py  04_multi_turn.py  05_basic_local_tool.py  06_two_tools_at_once.py  07_multi_step_booking.py  08_human_in_the_loop.py  09_limit_length_and_cost.py  10_chinese_chat.py  11_agent_as_tool.py  12_qimen_decision.py  README.md  basic_local_tool.py  human_in_the_loop.py  multi_turn.py
examples/fullstack-demo/: README.md
examples/fullstack-demo/backend/: .env.example  requirements.txt
examples/fullstack-demo/backend/app/: __init__.py  main.py  store.py
examples/fullstack-demo/backend/tests/: test_api.py  test_store.py
examples/fullstack-demo/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
examples/fullstack-demo/frontend/src/: App.tsx  styles.css
src/iztro_agents/: __init__.py  agent.py  model.py  session.py
tests/: _mock.py  live_examples_output.md  test_factories.py  test_human_in_the_loop.py  test_live.py  test_loop.py  test_session.py  test_streaming.py  test_tool_loops.py
