[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-iztro-agent-python"
version = "0.1.0"
description = "Build your own Ziwei (Purple Star Astrology) agent — hosted brain + iztro, with your own local tools, MCP, and human-in-the-loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai-agents>=0.13",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/iztro_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: end-to-end test against a deployed backend (needs ZIWEI_API_KEY; hits the network)",
]
