[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-iztro-agents"
version = "0.1.0"
description = "Build your own Ziwei (Purple Star Astrology) agent on the OpenAI Agents SDK — hosted brain + iztro, with your own local tools, MCP, and human-in-the-loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "iztro" }]
keywords = ["ziwei", "astrology", "purple-star", "iztro", "openai-agents", "agents", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai-agents>=0.13",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/SylarLong/openai-iztro-agents-python"
Repository = "https://github.com/SylarLong/openai-iztro-agents-python"
Documentation = "https://github.com/SylarLong/openai-iztro-agents-python#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/iztro_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "live: end-to-end test against a deployed backend (needs ZIWEI_API_KEY; hits the network)",
]
